[gd_scene load_steps=24 format=3 uid="uid://i8xki2p1wwxl"]

[ext_resource type="Script" path="res://components/players/Player.gd" id="1_1p4qs"]
[ext_resource type="Resource" uid="uid://4m8u1fahsxfp" path="res://resources/Billy.tres" id="2_kyuc1"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_8k2du"]
[ext_resource type="Resource" uid="uid://bxqvmnm521r0d" path="res://resources/Keyboard.tres" id="3_n0s5g"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_dmfve"]
[ext_resource type="Script" path="res://scripts/StateMachine.gd" id="4_jxjrl"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_isjbp"]
[ext_resource type="Script" path="res://components/entities/Actor.gd" id="8_ehu42"]
[ext_resource type="Script" path="res://components/entities/Hurtbox.gd" id="9_4fn8f"]
[ext_resource type="Script" path="res://components/entities/Hitbox.gd" id="10_wlq5f"]
[ext_resource type="Script" path="res://addons/goutte.animated_shape_2d/animated_shape_2d.gd" id="10_y5764"]
[ext_resource type="Resource" uid="uid://1cnnd1m50caq" path="res://resources/PlayersShapeFrames.tres" id="11_76v8q"]
[ext_resource type="AudioStream" uid="uid://cjyspfb26f0ps" path="res://resources/Steps.tres" id="14_057s4"]
[ext_resource type="SpriteFrames" uid="uid://chlwjrh3q88cx" path="res://resources/WillaFrames.tres" id="14_ksjqj"]
[ext_resource type="AudioStream" uid="uid://bpj7cwe7xefv1" path="res://resources/GoblinVoice.tres" id="15_8qrlg"]
[ext_resource type="AudioStream" uid="uid://vtvdbxqqx8gv" path="res://assets/sounds/effects/action/attack_01.wav" id="17_b4tui"]
[ext_resource type="AudioStream" uid="uid://xqrdqhhxuryn" path="res://assets/sounds/effects/action/dig_01.wav" id="18_84ogo"]
[ext_resource type="Script" path="res://scripts/AudioPlayer.gd" id="18_alxwn"]
[ext_resource type="AudioStream" uid="uid://clgpypxfug5n5" path="res://assets/sounds/effects/action/dig_02.wav" id="19_8j1ja"]
[ext_resource type="AudioStream" uid="uid://bkcwr1rkjjv0g" path="res://assets/sounds/effects/action/water_01.wav" id="20_ewqkg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5an6f"]
radius = 2.0
height = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0anfa"]
radius = 5.0
height = 28.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cfktg"]
radius = 8.0
height = 20.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("sound_attack", "sound_water", "sprite", "states", "hurtbox", "hitbox", "actor", "voice", "step", "sound_dig_start", "sound_dig_end")]
y_sort_enabled = true
motion_mode = 1
script = ExtResource("1_1p4qs")
data = ExtResource("2_kyuc1")
control = ExtResource("3_n0s5g")
sound_attack = NodePath("Attack")
sound_water = NodePath("Water")
sprite = NodePath("Sprite")
states = NodePath("StateMachine")
hurtbox = NodePath("Hurtbox")
hitbox = NodePath("Hitbox")
actor = NodePath("Actor")
voice = NodePath("Voice")
step = NodePath("Step")
sound_dig_start = NodePath("DigStart")
sound_dig_end = NodePath("DigEnd")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_jxjrl")

[node name="Root" type="Node" parent="StateMachine"]
script = ExtResource("3_8k2du")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToWalk" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="ToRun" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Run")
event = &"to_run"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Hurt")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="ToWatering" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Watering")
event = &"to_watering"
delay_in_seconds = "0.0"

[node name="ToDig" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Dig")
event = &"to_dig"
delay_in_seconds = "0.0"

[node name="ToDoing" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Doing")
event = &"to_doing"
delay_in_seconds = "0.0"

[node name="ToSleeping" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Sleeping")
event = &"to_sleeping"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Idle"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Walk" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToIdle" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToRun" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Run")
event = &"to_run"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Hurt")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="ToWatering" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Watering")
event = &"to_watering"
delay_in_seconds = "0.0"

[node name="ToDig" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Dig")
event = &"to_dig"
delay_in_seconds = "0.0"

[node name="ToDoing" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Doing")
event = &"to_doing"
delay_in_seconds = "0.0"

[node name="ToSleeping" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Sleeping")
event = &"to_sleeping"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Walk"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Run" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToIdle" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToWalk" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Walk")
event = &"to_walk"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Attack")
event = &"to_attack"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Hurt")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="ToWatering" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Watering")
event = &"to_watering"
delay_in_seconds = "0.0"

[node name="ToDig" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Dig")
event = &"to_dig"
delay_in_seconds = "0.0"

[node name="ToDoing" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Doing")
event = &"to_doing"
delay_in_seconds = "0.0"

[node name="ToSleeping" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Sleeping")
event = &"to_sleeping"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Run"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Attack" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToIdle" type="Node" parent="StateMachine/Root/Attack"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateMachine/Root/Attack"]
script = ExtResource("7_isjbp")
to = NodePath("../../Hurt")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Attack"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Hurt" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToIdle" type="Node" parent="StateMachine/Root/Hurt"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"to_idle"
delay_in_seconds = "0.0"

[node name="ToHurt" type="Node" parent="StateMachine/Root/Hurt"]
script = ExtResource("7_isjbp")
to = NodePath("..")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Hurt"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Watering" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToHurt" type="Node" parent="StateMachine/Root/Watering"]
script = ExtResource("7_isjbp")
to = NodePath("../../Hurt")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="Stop" type="Node" parent="StateMachine/Root/Watering"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"stop"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Watering"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Dig" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToHurt" type="Node" parent="StateMachine/Root/Dig"]
script = ExtResource("7_isjbp")
to = NodePath("../../Hurt")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="Stop" type="Node" parent="StateMachine/Root/Dig"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"stop"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Dig"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Doing" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="ToHurt" type="Node" parent="StateMachine/Root/Doing"]
script = ExtResource("7_isjbp")
to = NodePath("../../Hurt")
event = &"to_hurt"
delay_in_seconds = "0.0"

[node name="Stop" type="Node" parent="StateMachine/Root/Doing"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"stop"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Doing"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Sleeping" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="Stop" type="Node" parent="StateMachine/Root/Sleeping"]
script = ExtResource("7_isjbp")
to = NodePath("../../Idle")
event = &"stop"
delay_in_seconds = "0.0"

[node name="Kill" type="Node" parent="StateMachine/Root/Sleeping"]
script = ExtResource("7_isjbp")
to = NodePath("../../Death")
event = &"kill"
delay_in_seconds = "0.0"

[node name="Death" type="Node" parent="StateMachine/Root"]
script = ExtResource("4_dmfve")

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource("CapsuleShape2D_5an6f")

[node name="Actor" type="Area2D" parent="."]
visible = false
position = Vector2(11, 0)
collision_layer = 3
collision_mask = 3
script = ExtResource("8_ehu42")

[node name="Collision" type="CollisionShape2D" parent="Actor"]
position = Vector2(-11, 0)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_0anfa")
debug_color = Color(0, 0.643161, 0.305056, 0.42)

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2(0, -9)
collision_mask = 0
monitoring = false
script = ExtResource("9_4fn8f")

[node name="Collision" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CapsuleShape2D_cfktg")
debug_color = Color(0, 0.628329, 0.493411, 0.42)

[node name="AnimatedHurtbox" type="Node" parent="." node_paths=PackedStringArray("animated_sprite", "collision_shape")]
script = ExtResource("10_y5764")
animated_sprite = NodePath("../Sprite")
collision_shape = NodePath("../Hurtbox/Collision")
shape_frames = ExtResource("11_76v8q")

[node name="Hitbox" type="Area2D" parent="." node_paths=PackedStringArray("character")]
visible = false
collision_layer = 0
script = ExtResource("10_wlq5f")
character = NodePath("..")

[node name="Collision" type="CollisionPolygon2D" parent="Hitbox"]
polygon = PackedVector2Array(27, -8, 21, -20, 12, -29, 5, -31, -2, -31, -2, 2, 27, 2)

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -7)
sprite_frames = ExtResource("14_ksjqj")
animation = &"dig"

[node name="Step" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_057s4")

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_8qrlg")
script = ExtResource("18_alxwn")

[node name="Attack" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_b4tui")

[node name="DigStart" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_84ogo")
volume_db = -5.0

[node name="DigEnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_8j1ja")

[node name="Water" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_ewqkg")
volume_db = -8.0

[connection signal="state_entered" from="StateMachine/Root/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_processing" from="StateMachine/Root/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Walk" to="." method="_on_walk_state_entered"]
[connection signal="state_processing" from="StateMachine/Root/Walk" to="." method="_on_walk_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Run" to="." method="_on_run_state_entered"]
[connection signal="state_processing" from="StateMachine/Root/Run" to="." method="_on_run_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_exited" from="StateMachine/Root/Attack" to="." method="_on_attack_state_exited"]
[connection signal="state_processing" from="StateMachine/Root/Attack" to="." method="_on_attack_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Hurt" to="." method="_on_hurt_state_entered"]
[connection signal="state_processing" from="StateMachine/Root/Hurt" to="." method="_on_hurt_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Watering" to="." method="_on_watering_state_entered"]
[connection signal="state_processing" from="StateMachine/Root/Watering" to="." method="_on_watering_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Dig" to="." method="_on_dig_state_entered"]
[connection signal="state_processing" from="StateMachine/Root/Dig" to="." method="_on_dig_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Doing" to="." method="_on_doing_state_entered"]
[connection signal="state_exited" from="StateMachine/Root/Doing" to="." method="_on_doing_state_exited"]
[connection signal="state_processing" from="StateMachine/Root/Doing" to="." method="_on_doing_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Sleeping" to="." method="_on_sleeping_state_entered"]
[connection signal="state_exited" from="StateMachine/Root/Sleeping" to="." method="_on_sleeping_state_exited"]
[connection signal="state_processing" from="StateMachine/Root/Sleeping" to="." method="_on_sleeping_state_processing"]
[connection signal="state_entered" from="StateMachine/Root/Death" to="." method="_on_death_state_entered"]
[connection signal="state_processing" from="StateMachine/Root/Death" to="." method="_on_death_state_processing"]
